fix styles example 6

--- a/06-using-material-ui/src/styles.scss
+++ b/06-using-material-ui/src/styles.scss
@@ -38,5 +38,11 @@
       justify-content: center;
       margin-top: 15px;
     }
+
+    & > span {
+      display: block;
+      margin-top: 1rem;
+      color: #f44336;
+    }
   }
 }
